# application-preparation

./: .gitignore  CLAUDE.md  README.md  job_description.md  requirements.txt  temp_regenerate.py  temp_resume_silex.py
.claude/: settings.local.json
.claude/commands/: apply.md  cover_letter_create.md  generate.md  improve.md  resume_create.md
ats-filler/: IMPROVEMENTS.md  README.md  poc_snapshot_bulk.py  poc_snapshot_result.json  pyproject.toml
ats-filler/ats_filler/: __init__.py  server.py
ats-filler/ats_filler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ats-filler/ats_filler/common/: field_matchers.py
ats-filler/ats_filler/engine/: actions.py  session.py
ats-filler/ats_filler/schemas/: responses.py
ats-filler/schemas/: profile.py
ats-filler/tests/: integration_test.md  manual_test.md
ats/browser_use/: browser_use_apply.py  browser_use_init_profile.py
ats/scripts/: __init__.py  form_filler.py  workday.py
data/: ats_accounts.json  ats_platforms.json  courses_and_other.json  leadership.json  work_experiences.json
docs/: auto-apply-instructions.md
docs/plans/: 2026-01-10-robustness-fixes.md  2026-01-10-unified-generation-design.md  2026-01-10-unified-generation-implementation.md  2026-01-11-ats-mcp-server-design.md  (+4 more)
documentation/: skill-comments.md
scripts/: cover_letter.py  generate.py  generate_cover_letter.py  generate_resume.py  resume.py  validate_resume.py
templates/: Cover Letter - Adrian Turion.docx  Resume - Adrian Turion.docx
templates.old/: Cover Letter - Adrian Turion.docx
(+189 files in other folders)
