[project]
name = "ats-filler"
version = "0.1.0"
description = "MCP server for automated ATS form filling"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
ats-filler = "ats_filler.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
